Cheque register edit delete button disabled issue solved

--- a/KGERP/Views/ChequeRegister/ChequeSigning.cshtml
+++ b/KGERP/Views/ChequeRegister/ChequeSigning.cshtml
@@ -166,13 +166,13 @@
                                                                 <center class="btn btn-xs btn-danger text-center d-block" style="padding-left: 7px; padding-right: 7px;" id="showToHideCancel_@item.ChequeRegisterId" onclick="ChequeCancel('@item.ChequeRegisterId')">
                                                                     Cancel
                                                                 </center>
-                                                                <center class="btn btn-xs btn-danger disabled text-center hidden" style="padding-left: 7px; padding-right: 7px;" id="hideToShowCancel_@item.ChequeRegisterId">
+                                                                <center class="btn btn-xs btn-danger text-center hidden" style="padding-left: 7px; padding-right: 7px;" id="hideToShowCancel_@item.ChequeRegisterId">
                                                                     Canceled
                                                                 </center>
                                                             }
                                                             else
                                                             {
-                                                                <center class="btn btn-xs btn-danger disabled text-center" style="padding-left: 7px; padding-right: 7px;">
+                                                                <center class="btn btn-xs btn-danger text-center" style="padding-left: 7px; padding-right: 7px;">
                                                                     Canceled
                                                                 </center>
                                                             }
@@ -247,13 +247,13 @@
                                                                 <center class="btn btn-xs btn-danger text-center d-block" style="padding-left: 7px; padding-right: 7px;" id="showToHideCancel_@item.ChequeRegisterId" onclick="ChequeCancel('@item.ChequeRegisterId')">
                                                                     Cancel
                                                                 </center>
-                                                                <center class="btn btn-xs btn-danger disabled text-center hidden" style="padding-left: 7px; padding-right: 7px;" id="hideToShowCancel_@item.ChequeRegisterId">
+                                                                <center class="btn btn-xs btn-danger text-center hidden" style="padding-left: 7px; padding-right: 7px;" id="hideToShowCancel_@item.ChequeRegisterId">
                                                                     Canceled
                                                                 </center>
                                                             }
                                                             else
                                                             {
-                                                                <center class="btn btn-xs btn-danger disabled text-center" style="padding-left: 7px; padding-right: 7px;">
+                                                                <center class="btn btn-xs btn-danger text-center" style="padding-left: 7px; padding-right: 7px;">
                                                                     Canceled
                                                                 </center>
                                                             }
