--- a/KGERP/Views/ChequeRegister/NewChequeRegister.cshtml
+++ b/KGERP/Views/ChequeRegister/NewChequeRegister.cshtml
@@ -268,7 +268,7 @@
                                         </td>
                                         <td>@item.Remarks</td>
                                         <td>
-                                            @if (item.IsSigned == false)
+                                            @if (item.IsPrinted == false)
                                             {
                                                 <a id="@item.ChequeRegisterId" onclick="makeEditble(@item.ChequeRegisterId);" class="linkPointer" title="Edit"><i class="fa fa-pencil-square-o"></i></a>
 
