--- a/KGERP/Views/Collection/PurchaseOrdersByID.cshtml
+++ b/KGERP/Views/Collection/PurchaseOrdersByID.cshtml
@@ -36,31 +36,32 @@
 
 
                     <div class="box-danger">
-                        <div class="box">
-                            <table class="table table-bordered">
-                                <tr>
-                                    <th>Bank Name</th>
-                                    <td>@Model.BankName</td>
-                                    <th>Branch Name</th>
-                                    <td>@Model.BranchName</td>
-                                </tr>
-                                <tr>
-                                    <th>A/C Name</th>
-                                    <td>@Model.ACName</td>
-                                    <th>A/C No</th>
-                                    <td>@Model.ACNo</td>
-                                </tr>
-                            </table>
+                        <div style="margin: 10px 0;">
+
+                            @if (Model.PaymentMasterId == 0)
+                            {
+                                <table class="table table-bordered">
+                                    <tr>
+                                        <th>Bank Name</th>
+                                        <td>@Model.BankName</td>
+                                        <th>Branch Name</th>
+                                        <td>@Model.BranchName</td>
+                                    </tr>
+                                    <tr>
+                                        <th>A/C Name</th>
+                                        <td>@Model.ACName</td>
+                                        <th>A/C No</th>
+                                        <td>@Model.ACNo</td>
+                                    </tr>
+                                </table>
+                            }
 
                             <div class="box-body">
                                 @if (Model.PaymentMasterId > 0)
                                 {
-
-
                                     <div class="col-md-1"> </div>
                                     <div class="col-md-10">
                                         <table class="table">
-
                                             <tr>
                                                 <th style="width:18%">
                                                     Payment No
@@ -98,7 +99,6 @@
                                                 <th style="width:2%">:</th>
                                                 <th style="width:30%">@Model.BankCharge</th>
                                             </tr>
-
                                         </table>
                                     </div>
                                     <div class="col-md-1"> </div>
@@ -218,8 +218,9 @@
 
                             <div class="box-footer">
                                 <div class="row">
-                                    <div class="col-md-6"></div>
-                                    <div class="col-md-6">
+                                    <div class="col-md-4"></div>
+                                    <div class="col-md-4"></div>
+                                    <div class="col-md-4">
                                         <button type="submit" id="poCreateBtn" class="btn btn-primary btn-block">
                                             <i class='fa fa-plus'></i>
                                             <span>Payment to @Model.CommonCustomerName</span>
@@ -228,91 +229,90 @@
                                 </div>
                             </div>
 
-
-                            <div class="box-danger">
-                                <div class="box-header">
-
-                                </div>
-                                <!-- /.box-header -->
-                                <div class="box-body">
-                                    <div class="table-responsive">
-                                        <table id="KgErpDataTable" class="table table-striped">
-                                            <thead>
-                                                <tr>
-                                                    <th>SL</th>
-                                                    <th>
-                                                        WO No
-                                                    </th>
-                                                    <th>
-                                                        WO Date
-                                                    </th>
-
-                                                    <th style="text-align:right;">
-                                                        Payment Amount
-                                                    </th>
-
-                                                </tr>
-                                            </thead>
-                                            @{int sl = 0;
-                                                decimal paidTotal = 0;
-                                            }
-                                            <tbody>
-                                                @foreach (var item in Model.DataList)
-                                                {
-                                                    paidTotal += item.OutAmount ?? 0;
+                            @if (Model.PaymentMasterId > 0)
+                            {
+                                <div class="box-danger">
+                                    <div class="box-header"></div>
+                                    <!-- /.box-header -->
+                                    <div class="box-body">
+                                        <div class="table-responsive">
+                                            <table id="KgErpDataTable" class="table table-striped">
+                                                <thead>
                                                     <tr>
-                                                        <td>@(++sl)</td>
-                                                        <td>
-                                                            @item.OrderNo
-                                                        </td>
-                                                        <td>
-                                                            @item.OrderDate.ToString("dd-MM-yyyy")
-                                                        </td>
+                                                        <th>SL</th>
+                                                        <th>
+                                                            WO No
+                                                        </th>
+                                                        <th>
+                                                            WO Date
+                                                        </th>
 
-                                                        <td style="text-align:right;">
-                                                            @item.OutAmount
-                                                        </td>
+                                                        <th style="text-align:right;">
+                                                            Payment Amount
+                                                        </th>
+                                                    </tr>
+                                                </thead>
+                                                @{int sl = 0;
+                                                    decimal paidTotal = 0;
+                                                }
+                                                <tbody>
+                                                    @foreach (var item in Model.DataList)
+                                                    {
+                                                        paidTotal += item.OutAmount ?? 0;
+                                                        <tr>
+                                                            <td>@(++sl)</td>
+                                                            <td>
+                                                                @item.OrderNo
+                                                            </td>
+                                                            <td>
+                                                                @item.OrderDate.ToString("dd-MM-yyyy")
+                                                            </td>
 
+                                                            <td style="text-align:right;">
+                                                                @item.OutAmount
+                                                            </td>
+
+
+                                                        </tr>
+                                                    }
+                                                </tbody>
+                                                <tfoot>
+                                                    <tr>
+                                                        <th></th>
+                                                        <th colspan="2">
+                                                            Total Amount
+                                                        </th>
+
+                                                        <th style="text-align:right;">
+                                                            @paidTotal
+                                                        </th>
 
                                                     </tr>
-                                                }
-                                            </tbody>
-                                            <tfoot>
-                                                <tr>
-                                                    <th></th>
-                                                    <th colspan="2">
-                                                        Total Amount
-                                                    </th>
-
-                                                    <th style="text-align:right;">
-                                                        @paidTotal
-                                                    </th>
-
-                                                </tr>
-                                            </tfoot>
-                                        </table>
+                                                </tfoot>
+                                            </table>
+                                        </div>
                                     </div>
-                                </div>
 
-                                <div class="box-footer">
-                                    <div class="row">
+                                    <div class="box-footer">
+                                        <div class="row">
 
-                                        <div class="col-md-8"></div>
-                                        <div class="col-md-4">
-                                            @if (!Model.IsFinalized)
-                                            {
-                                                <a onclick="makeProdReferenceSubmitable(@Model.PaymentMasterId);" class="btn btn-success btn-block" style="width:100%" data-toggle="modal" data-target="#submitPaymentMasterIdModal" title="Submit" data-placement="top"><i class="fa fa-fingerprint" aria-hidden="true"></i>Submit</a>
+                                            <div class="col-md-8"></div>
+                                            <div class="col-md-4">
+                                                @if (!Model.IsFinalized)
+                                                {
+                                                    <a onclick="makeProdReferenceSubmitable(@Model.PaymentMasterId);" class="btn btn-success btn-block" style="width:100%" data-toggle="modal" data-target="#submitPaymentMasterIdModal" title="Submit" data-placement="top"><i class="fa fa-fingerprint" aria-hidden="true"></i>Submit</a>
 
-                                            }
-                                            else
-                                            {
-                                                <button class="btn btn-success btn-block" style="width:100%" disabled="disabled">Submitted</button>
+                                                }
+                                                else
+                                                {
+                                                    <button class="btn btn-success btn-block" style="width:100%" disabled="disabled">Submitted</button>
 
-                                            }
+                                                }
+                                            </div>
                                         </div>
                                     </div>
                                 </div>
-                            </div>
+                            }
                         </div>
                     </div>
                 </div>
