--- a/KGERP/Views/ChequeRegister/ChequeSigning.cshtml
+++ b/KGERP/Views/ChequeRegister/ChequeSigning.cshtml
@@ -303,7 +303,7 @@
                 <h3 class="text-primary" id="confirmationModalLabel">Confirmation</h3>
             </div>
             <div class="modal-body" style="padding: 30px 20px;">
-                <h4>Are you sure you want to reject?</h4>
+                <h4>Are you sure you want to cancel?</h4>
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
@@ -320,7 +320,7 @@
                 <h3 class="text-danger" id="confirmationModalLabel">Message</h3>
             </div>
             <div class="modal-body" style="padding: 30px 20px;">
-                <h4 id="errorMessage">Are you sure you want to reject?</h4>
+                <h4 id="errorMessage"></h4>
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-primary" data-dismiss="modal">Close</button>
