Cheque cancelation module done and EDMX updated

--- a/KGERP/Views/ChequeRegister/ChequeCancelRequest.cshtml
+++ b/KGERP/Views/ChequeRegister/ChequeCancelRequest.cshtml
@@ -152,7 +152,7 @@
                                         <td>@item.Remarks</td>
                                         <td>@item.Remarks</td>
                                         <td>
-                                            @if (item.IsPrinted == false)
+                                            @if (item.HasPDF == false)
                                             {
                                                 <a id="@item.ChequeRegisterId" onclick="makeEditble(@item.ChequeRegisterId);" class="linkPointer" title="Edit"><i class="fa fa-pencil-square-o"></i></a>
 
