--- a/KGERP/Views/ChequeRegister/ChequeCancelRequest.cshtml
+++ b/KGERP/Views/ChequeRegister/ChequeCancelRequest.cshtml
@@ -78,7 +78,7 @@
                     <h3 class="modal-title text-primary" id="confirmationModalLabel">Confirmation</h3>
                 </div>
                 <div class="modal-body">
-                    <p id="modalMessage" style="margin: 30px 0;"></p>
+                    <h4 id="modalMessage" style="margin: 30px 0;"></h4>
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
@@ -106,12 +106,12 @@
                                     <th>Cheque No</th>
                                     <th>Issue Date</th>
                                     <th>Amount</th>
-                                    <th>Project Name</th>
                                     <th>Supplier/Party</th>
                                     <th>Requisition No</th>
+                                    <th>Requested By</th>
                                     <th>Request Date</th>
                                     <th>Reasons</th>
-                                    <th>Action</th>
+                                    <th>Status</th>
                                 </tr>
                             </thead>
                             @{int sl = 0;}
@@ -128,7 +128,6 @@
                                         <td>@item.ChequeNo</td>
                                         <td>@item.IssueDate.ToString("dd-MM-yyyy")</td>
                                         <td>@item.Amount</td>
-                                        <td>@item.ProjectName</td>
                                         <td>
                                             @if (item.SupplierId > 0)
                                             {
@@ -149,26 +148,21 @@
                                                 <small class="text-center text-secondary d-block" id="hidePrintButton">General Cheque</small>
                                             }
                                         </td>
-                                        <td>@item.Remarks</td>
-                                        <td>@item.Remarks</td>
+                                        <td>@item.RequestedBy</td>
+                                        <td>@item.RequestedOn.ToString("dd/MM/yyyy")</td>
+                                        <td>@item.CancelReason</td>
                                         <td>
-                                            @if (item.HasPDF == false)
+                                            @if (item.IsCanceled == true)
                                             {
-                                                <a id="@item.ChequeRegisterId" onclick="makeEditble(@item.ChequeRegisterId);" class="linkPointer" title="Edit"><i class="fa fa-pencil-square-o"></i></a>
-
-                                                <a id="@item.ChequeRegisterId" onclick="makeDeletable(@item.ChequeRegisterId);" class="linkPointer" data-toggle="modal" data-target="#ChequeRegisterDeleteModal" title="Delete"
-                                                   data-placement="top">
-                                                    <i class="glyphicon glyphicon-trash" aria-hidden="true"></i>
-                                                </a>
+                                                <center class="btn btn-xs btn-success text-center" style="padding-left: 7px; padding-right: 7px;">
+                                                    Canceled
+                                                </center>
                                             }
                                             else
                                             {
-                                                <a id="@item.ChequeRegisterId" class="linkPointer disabled" title="Disabled"><i class="fa fa-pencil-square-o"></i></a>
-
-                                                <a id="@item.ChequeRegisterId" class="linkPointer disabled" title="Disabled"
-                                                   data-placement="top">
-                                                    <i class="glyphicon glyphicon-trash" aria-hidden="true"></i>
-                                                </a>
+                                                <center class="btn btn-xs btn-warning text-center" style="padding-left: 7px; padding-right: 7px;">
+                                                    Pending
+                                                </center>
                                             }
                                         </td>
                                     </tr>
