--- a/KGERP/Views/Procurement/ProcurementPurchaseOrderReport.cshtml
+++ b/KGERP/Views/Procurement/ProcurementPurchaseOrderReport.cshtml
@@ -153,7 +153,7 @@
                     <tr>
                         <td style="width:20%"></td>
                         <td style="width:10%">
-                            <img height="80" width="80" id="topLogo" src="~/Images/Logo/@Model.Companylogo" />
+                            <img height="80" width="80" id="topLogo" src="/Content/img/TCLLogo.png" />
 
                         </td>
                         <td style="width:70%">
