--- a/KGERP/Views/Consumption/ConsumptionMasterSlave.cshtml
+++ b/KGERP/Views/Consumption/ConsumptionMasterSlave.cshtml
@@ -175,81 +175,85 @@
 
                             </div>
                         }
-                    <div class="row">
-                        <div class="col-md-3 d-block" id="MaterialType">
-                            <div class="form-group">
-                                <label id="materialTitle"> Material :</label>
-                                @Html.DropDownListFor(model => model.DetailModel.ProductId, Model.MaterialTypeList as SelectList, "==Select Material==", new { id = "ddlRequisitionItemId", @class = "form-control searchingDropdown", style = "width:100%", })
-                                @Html.ValidationMessageFor(model => model.DetailModel.ProductId, "", new { @class = "text-danger" })
-                            </div>
-                        </div>
-                        <div class="col-md-3 d-block" id="inputEstimateQty">
-                            <div class="form-group">
-                                <label>Stored Quantity :</label>
-                                @Html.TextBoxFor(model => model.DetailModel.StoredQty, new { id = "decEstimatedQty", type = "number", step = "0.01", @class = "form-control", placeholder = "Estimate quantity", ReadOnly = "true" })
-                                @Html.ValidationMessageFor(model => model.DetailModel.StoredQty, "", new { @class = "text-danger" })
-                            </div>
-                        </div>
+                        @if ((Model?.StatusId ?? 0) != (int)ConsumptionStatusEnum.Submitted)
+                        {
+                            <div class="row">
+                                <div class="col-md-3 d-block" id="MaterialType">
+                                    <div class="form-group">
+                                        <label id="materialTitle"> Material :</label>
+                                        @Html.DropDownListFor(model => model.DetailModel.ProductId, Model.MaterialTypeList as SelectList, "==Select Material==", new { id = "ddlRequisitionItemId", @class = "form-control searchingDropdown", style = "width:100%", })
+                                        @Html.ValidationMessageFor(model => model.DetailModel.ProductId, "", new { @class = "text-danger" })
+                                    </div>
+                                </div>
+                                <div class="col-md-3 d-block" id="inputEstimateQty">
+                                    <div class="form-group">
+                                        <label>Stored Quantity :</label>
+                                        @Html.TextBoxFor(model => model.DetailModel.StoredQty, new { id = "decEstimatedQty", type = "number", step = "0.01", @class = "form-control", placeholder = "Estimate quantity", ReadOnly = "true" })
+                                        @Html.ValidationMessageFor(model => model.DetailModel.StoredQty, "", new { @class = "text-danger" })
+                                    </div>
+                                </div>
 
-                        <div class="col-md-3 d-block" id="inputReceivedSoFar">
-                            <div class="form-group">
-                                <label>Unit Price </label>
-                                @Html.TextBoxFor(model => model.DetailModel.UnitPrice, new { id = "decUnitPrice", type = "number", step = "0.01", @class = "form-control", placeholder = "Received so far", ReadOnly = "true" })
-                                @Html.ValidationMessageFor(model => model.DetailModel.UnitPrice, "", new { @class = "text-danger" })
-                            </div>
-                        </div>
+                                <div class="col-md-3 d-block" id="inputReceivedSoFar">
+                                    <div class="form-group">
+                                        <label>Unit Price </label>
+                                        @Html.TextBoxFor(model => model.DetailModel.UnitPrice, new { id = "decUnitPrice", type = "number", step = "0.01", @class = "form-control", placeholder = "Received so far", ReadOnly = "true" })
+                                        @Html.ValidationMessageFor(model => model.DetailModel.UnitPrice, "", new { @class = "text-danger" })
+                                    </div>
+                                </div>
 
-                        <div class="col-md-3 d-block" id="inputRemainingQty">
-                            <div class="form-group">
-                                <label>Remaining Quantity :</label>
-                                @Html.TextBoxFor(model => model.DetailModel.RemainingQty, new { id = "decRemainingQty", type = "number", step = "0.01", @class = "form-control", placeholder = "Remaining quantity", ReadOnly = "true" })
-                                @Html.ValidationMessageFor(model => model.DetailModel.RemainingQty, "", new { @class = "text-danger" })
-                            </div>
-                        </div>
+                                <div class="col-md-3 d-block" id="inputRemainingQty">
+                                    <div class="form-group">
+                                        <label>Available Quantity :</label>
+                                        @Html.TextBoxFor(model => model.DetailModel.RemainingQty, new { id = "decRemainingQty", type = "number", step = "0.01", @class = "form-control", placeholder = "Remaining quantity", ReadOnly = "true" })
+                                        @Html.ValidationMessageFor(model => model.DetailModel.RemainingQty, "", new { @class = "text-danger" })
+                                    </div>
+                                </div>
 
-                       
-                        <div class="col-md-3 d-block" id="inputTotalPrice">
-                            <div class="form-group">
-                                <label id="totalTitle">Total Amount :</label>
-                                @Html.TextBoxFor(model => model.DetailModel.TotalPrice, new { id = "decTotalPrice", type = "number", step = "0.01", @class = "form-control", placeholder = "Total amount", ReadOnly = "true" })
-                                @Html.ValidationMessageFor(model => model.DetailModel.TotalPrice, "", new { @class = "text-danger" })
-                            </div>
-                        </div>
 
-                        <div class="col-md-3 d-block" id="inputUnitRate">
-                            <div class="form-group">
-                                <label id="unitTitle">Consumption Quantity</label>
-                                @Html.TextBoxFor(model => model.DetailModel.ConsumedQty, new { id = "decConsumptionQty", type = "number", step = "0.01", @class = "form-control", placeholder = "Consumption Quantity", })
-                                @Html.ValidationMessageFor(model => model.DetailModel.ConsumedQty, "", new { @class = "text-danger" })
+                                <div class="col-md-3 d-block" id="inputTotalPrice">
+                                    <div class="form-group">
+                                        <label id="totalTitle">Total Amount :</label>
+                                        @Html.TextBoxFor(model => model.DetailModel.TotalPrice, new { id = "decTotalPrice", type = "number", step = "0.01", @class = "form-control", placeholder = "Total amount", ReadOnly = "true" })
+                                        @Html.ValidationMessageFor(model => model.DetailModel.TotalPrice, "", new { @class = "text-danger" })
+                                    </div>
+                                </div>
+
+                                <div class="col-md-3 d-block" id="inputUnitRate">
+                                    <div class="form-group">
+                                        <label id="unitTitle">Consumption Quantity</label>
+                                        @Html.TextBoxFor(model => model.DetailModel.ConsumedQty, new { id = "decConsumptionQty", type = "number", step = "0.01", @class = "form-control", placeholder = "Consumption Quantity", })
+                                        @Html.ValidationMessageFor(model => model.DetailModel.ConsumedQty, "", new { @class = "text-danger" })
+                                    </div>
+                                </div>
                             </div>
-                        </div>
+                        }
+
                     </div>
 
-                    </div>
+                    @if ((Model?.StatusId ?? 0) != (int)ConsumptionStatusEnum.Submitted)
+                    {
 
-
-
-                    <div class="box-footer">
-                        <div class="row">
-                            <div class="col-md-4"></div>
-                            <div class="col-md-4"></div>
-                            <div class="col-lg-4 col-md-4">
-                                <input type="submit" id="sosoCreateBtnCreateBtn" onclick="CreateConsumption()" value="Add Consumption" class="btn btn-primary btn-block" />
+                        <div class="box-footer">
+                            <div class="row">
+                                <div class="col-md-4"></div>
+                                <div class="col-md-4"></div>
+                                <div class="col-lg-4 col-md-4">
+                                    <input type="submit" id="sosoCreateBtnCreateBtn" onclick="CreateConsumption()" value="Add Consumption" class="btn btn-primary btn-block" />
+                                </div>
                             </div>
                         </div>
+
+                    }
+
+
                     </div>
-
-
-
-
-                </div>
 
                 @if (Model.ConsumptionMasterId > 0)
                 {
                     @Html.HiddenFor(model => model.ConsumptionMasterId, new { id = "hidSlaveID" })
 
                     <div class="table-responsive col-md-12  text-wrap">
-                        <table id="KgErpDataTable" class="table table-striped table-responsive">
+                        <table class="table table-striped table-responsive">
                             <thead>
                                 <tr>
                                     <th>SL</th>
@@ -259,7 +263,7 @@
                                     <th>Unit</th>
                                     <th>Total Amount</th>
 
-                                    @if (Model.StatusId == (int)EnumBillRequisitionStatus.Draft)
+                                    @if (Model.StatusId == (int)ConsumptionStatusEnum.Draft)
                                     {
                                         <th style="padding:5px;text-align:center;">Action</th>
                                     }
@@ -281,7 +285,7 @@
                                         <td>@String.Format("{0:0.00}", item.TotalPrice)</td>
 
 
-                                        @{ if (Model.StatusId == (int)EnumBillRequisitionStatus.Draft)
+                                        @{ if (Model.StatusId == (int)ConsumptionStatusEnum.Draft)
                                             {
                                                 <td style="padding:5px;text-align:center;">
                                                     <a id="@item.ConsumptionDetailsId" onclick=" makeEditble(@item.ConsumptionDetailsId);" class="linkPointer" title="Edit"><i class="fa fa-edit" aria-hidden="true"></i></a>
@@ -295,6 +299,22 @@
                             </tbody>
                         </table>
                     </div>
+
+                    if (Model?.StatusId == (int)ConsumptionStatusEnum.Draft)
+                    {
+                        <div class="box-footer">
+                            <div class="row">
+                                <div class="col-md-6"></div>
+                                <div class="col-md-6">
+                                    <a class="linkPointer btn btn-success" data-toggle="modal" style="width:100%" data-target="#ConsumptionSubmiteModal" data-placement="top">
+
+                                        <i>Submit</i>
+
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                    }
                 }
 
             </div>
@@ -303,10 +323,10 @@
     </section>
 }
 
-@using (Html.BeginForm("ConsumptionMasterSlave", "Consumption", FormMethod.Post, new { id = "BRMasterSlaveFormId", @class = "formValidator" }))
+@using (Html.BeginForm("ConsumptionMasterSlave", "Consumption", FormMethod.Post, new { id = "ConsumptionSubmiteFormId", @class = "formValidator" }))
 {
     <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-    <div class="modal fade" id="submitDamageModal" data-toggle="modal" data-backdrop="static" data-keyboard="false" role="dialog">
+    <div class="modal fade" id="ConsumptionSubmiteModal" data-toggle="modal" data-backdrop="static" data-keyboard="false" role="dialog">
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
@@ -317,6 +337,7 @@
                 </div>
                 <div class="modal-body">
                     @Html.HiddenFor(model => model.ConsumptionMasterId, new { id = "hidSubmitBRMasterId" })
+                    @Html.Hidden("ActionId", (int)ActionEnum.Finalize, new { id = "hidSubmitBRMasterId" })
                     @*@Html.HiddenFor(model => model.CompanyFK, new { id = "hidSubmitCompanyFK" })*@
 
                     @Html.AntiForgeryToken()
@@ -454,12 +475,12 @@
         // make submitable form
         function makeSubmitble(rowId) {
 
-            if (@Model.StatusId == 0) {
+            @*if (@Model.StatusId == 0) {
                 $('.submitOrDraftText').text("Make Submit");
             }
             else {
                 $('.submitOrDraftText').text("Make Draft");
-            }
+            }*@
             $('#hidSubmitBRMasterId').val(@Model.ConsumptionMasterId);
         }
 
@@ -632,9 +653,9 @@
                 success: function (data) {
                     showBoqMaterialList.empty();
                     showBoqMaterialList.append("<option selected disabled>==Select Material==</option>");
-                   
+
                     $.each(data, function (index, item) {
-                        
+
 
                         showBoqMaterialList.append($('<option>', {
                             value: item.Value,
@@ -779,12 +800,14 @@
 
         $("#ddlRequisitionItemId").on('change', function () {
             var productId = $(this).val();
-            var boqItemId = $("#hidBoqIteamId").val();
+            var getBoqItemId = $("#ddlBOQItemId").val();
+            var storeId = $("#ddlStoreId").val();
+
             $.ajax({
                 type: "GET",
-                url: "/MaterialReceive/GetMaterialReceiveLByBoqItemAndProductId",
+                url: "/MaterialReceive/GetMaterialReceiveLByBoqItemStoreIdAndProductId",
                 dataType: "json",
-                data: { BoqItem: boqItemId, ProductId: productId },
+                data: { BoqItem: getBoqItemId, storeId:storeId,ProductId: productId },
                 success: function (data) {
 
                     $("#decEstimatedQty").val(data.StoredQty);
@@ -834,7 +857,7 @@
         $(document).ready(function () {
             'use strict';
 
-           
+
 
             // dependable dropdown validate
             $("#ddlBRSubTypeId").empty();
