material receive list update

--- a/KGERP/Views/MaterialReceive/Index.cshtml
+++ b/KGERP/Views/MaterialReceive/Index.cshtml
@@ -74,7 +74,7 @@
                                         <th>PO No</th>
                                         <th>Supplier</th>
                                         <th>Warehouse</th>
-                                        <th>Stutas</th>
+                                        <th>Status</th>
                                         <th>Submission</th>
 
                                         <th>Report</th>
