--- a/KGERP/Views/MaterialReceive/SeedIndex.cshtml
+++ b/KGERP/Views/MaterialReceive/SeedIndex.cshtml
@@ -71,8 +71,9 @@
                                         <th style="width:15%;">Challan Date</th>
                                         <th style="width:10%;">Received Date</th>
                                         <th style="width:15%;">Supplier</th>
-                                        <th style="width:10%;">Stutas</th>
-                                        <th style="width:10%;">Report</th>
+                                        <th style="width:10%;">Status</th>
+                                        <th style="width:10%;">Bill</th>
+                                        <th style="width:10%;">Detail </th>
                                         <th style="width:5%;">Action</th>
                                     </tr>
                                 </thead>
@@ -81,7 +82,7 @@
                                 <tbody>
                                     @foreach (var item in Model.MRlist)
                                     {
-                                        <tr>
+                                        <tr data-id="@item.PurchaseOrderId">
                                             <td>
                                                 @(++sl)
                                             </td>
@@ -113,9 +114,17 @@
                                                     <button class="btn btn-warning btn-xs">NOT-SUBMITTED</button>
                                                 }
                                             </td>
+                                           
+                                            <td>
+                                                @using (Html.BeginForm("MaterialBillGenerate", "Report", FormMethod.Post, new { target = "_blank" }))
+                                                {
+                                                    @Html.Hidden("Procurement_PurchaseOrderFk", item.PurchaseOrderId)
+                                                    <button type="submit" class="btn btn-link">Report</button>
+                                                }
+                                            </td>
                                             <td>
                                                 <a href="~/WareHouse/WareHousePOReceivingSlaveReport?companyId=@item.CompanyId&materialReceiveId=@item.MaterialReceiveId" target="_blank" class="btn btn-primary btn-xs">
-                                                    Report
+                                                    Detail
                                                 </a>
                                             </td>
                                             <td>
@@ -142,8 +151,8 @@
     @Scripts.Render("~/bundles/jqueryui")
     @Styles.Render("~/Content/cssjqryUi")
 
-    <script type="text/javascript">
-
+<script type="text/javascript">
+   
         $('.datepicker').datepicker({
             dateFormat: "dd/mm/yy",
             showOn: 'both',
@@ -155,10 +164,12 @@
 
         var message = '@message';
         if(message){
-        alert(message);
+            alert(message);
+
+
     };
 
-    </script>
+</script>
 
 }
 
